--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.1",
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
+    "vue-charts": "^0.2.1",
     "vue-google-charts": "^0.3.2",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
