--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "vue-charts": "^0.2.1",
     "vue-google-charts": "^0.3.2",
     "vue-router": "^3.1.3",
+    "vuetify": "^2.2.8",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
